--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,3 @@
-/* static/style.css */
-
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
@@ -42,6 +40,12 @@ button:hover {
 table {
   border-collapse: collapse;
   width: 100%;
+}
+
+/* CSS for table headers */
+th {
+  text-align: left; /* Align text to the left */
+  padding: 5px; /* Add padding to the headers */
 }
 
 thead th,
@@ -112,4 +116,63 @@ tfoot td:first-child {
 .pagination .active {
   background-color: #4caf50;
   color: white;
+}
+
+
+.transaction-form h3 {
+  margin-top: 0;
+}
+
+.transaction-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.transaction-form input[type="text"],
+.transaction-form input[type="number"],
+.transaction-form select {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.transaction-form input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.transaction-form input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.transaction-row {
+  border-bottom: 1px solid #ccc; /* Add border between rows */
+}
+
+/* Optional: Style header row differently */
+tr.header-row {
+  background-color: #a6a6a6;
+  font-weight: bold;
+}
+
+.delete-button {
+  background-color: #ff6347; /* Red background color */
+  color: white; /* White text color */
+  padding: 10px 20px; /* Add padding */
+  border: none; /* Remove border */
+  border-radius: 5px; /* Add border radius */
+  cursor: pointer; /* Add pointer cursor */
+}
+
+/* Hover effect */
+.delete-button:hover {
+  background-color: #ff4136; /* Darker red background color on hover */
 }
