--- a/static/styles.css
+++ b/static/styles.css
@@ -23,18 +23,34 @@ button {
   margin-bottom: 10px;
 }
 
-button {
+.edit {
   cursor: pointer;
-  background-color: #007bff;
+  background-color: #FFD300;
   color: white;
   border: none;
   border-radius: 3px;
   padding: 8px 16px;
   margin-right: 5px;
+  transition: background-color 0.3s ease-in-out;
 }
 
-button:hover {
-  background-color: #0056b3;
+.edit:hover {
+  background-color: #F4BC1C;
+}
+
+.delete {
+  cursor: pointer;
+  background-color: #FF0000;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 8px 16px;
+  margin-right: 5px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.delete:hover {
+  background-color: #CE2029;
 }
 
 table {
@@ -147,6 +163,7 @@ tfoot td:first-child {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .transaction-form input[type="submit"]:hover {
@@ -163,16 +180,96 @@ tr.header-row {
   font-weight: bold;
 }
 
-.delete-button {
-  background-color: #ff6347; /* Red background color */
-  color: white; /* White text color */
-  padding: 10px 20px; /* Add padding */
-  border: none; /* Remove border */
-  border-radius: 5px; /* Add border radius */
-  cursor: pointer; /* Add pointer cursor */
+#modal-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  z-index: 9998; /* Ensure overlay appears below the modal */
 }
 
-/* Hover effect */
-.delete-button:hover {
-  background-color: #ff4136; /* Darker red background color on hover */
+.modal {
+  width: 50%;
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  opacity: 0; /* Initial opacity */
+  transition: opacity 0.3s ease; /* Add transition for opacity */
+  background-color: white; /* Ensure a solid background color */
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  z-index: 9998; /* Ensure overlay is behind the modal */
+  display: none; /* Initially hidden */
+}
+
+.modal.show {
+  display: block;
+  opacity: 1; /* Change opacity to 1 when modal is shown */
+}
+
+.modal-overlay.show {
+  display: block; /* Show overlay when modal is shown */
+}
+
+.modal-dialog {
+  width: 50%;
+  padding: 15px;
+}
+
+.modal-header {
+  padding: 10px 0;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 10px;
+}
+
+.modal-header .modal-title {
+  font-size: 20px;
+}
+
+.modal-body {
+  margin-bottom: 20px;
+}
+
+.modal-body label {
+  font-weight: bold;
+}
+
+.modal-body input[type="text"],
+.modal-body input[type="number"] {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.modal-footer {
+  text-align: right;
+}
+
+.save-changes {
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.save-changes:hover {
+  background-color: #45a049;
 }
