--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
                   <form action="/transaction" method="post">
                       <label for="transaction_type">Transaction Type:</label>
                       <select id="transaction_type" name="transaction_type" required>
-                          <option value="add">Add</option>
-                          <option value="subtract">Deduct</option>
+                          <option value="add">ADD</option>
+                          <option value="subtract">DEDUCT</option>
                       </select><br />
                       Description: <input type="text" name="description" required /><br />
                       Amount: <input type="number" step="0.01" name="amount" required /><br />
@@ -29,7 +29,7 @@
               </div>
           </div>
   
-          <h3>Transactions</h3>
+          <h3>My Transactions</h3>
           <table>
               <tr style="background-color: #a6a6a6">
                   <th>DATE</th>
