--- a/static/styles.css
+++ b/static/styles.css
@@ -19,7 +19,6 @@ label {
 input[type="text"],
 input[type="number"],
 button {
-  padding: 5px;
   margin-bottom: 10px;
 }
 
@@ -320,4 +319,33 @@ tr.header-row {
 
 .search-results tr:hover {
   background-color: #f5f5f5;
+}
+
+.custom-form {
+  display: flex;
+  justify-content: left;
+}
+
+.custom-input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  width: 70%; /* Adjust width as needed */
+}
+
+.custom-date {
+  height: 50%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 0 5px 5px 0;
+  outline: none;
+}
+
+.custom-btn {
+  padding: 10px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
