added icon and modified search results

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -16,6 +16,8 @@
     {% else %}
     <h3>No search query or date provided</h3>
     {% endif %}
+    <button onclick="window.location.href = '/';" class="go-back-btn">Go Back to Home</button>
+    <br>
     <table>
         <tr>
             <th>Date</th>
