--- a/static/styles.css
+++ b/static/styles.css
@@ -349,3 +349,17 @@ tr.header-row {
   cursor: pointer;
   outline: none;
 }
+
+.go-back-btn {
+  padding: 8px 15px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.go-back-btn:hover {
+  background-color: #0056b3;
+}
